--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.8.1
+certifi==2025.10.5
 chardet==5.2.0
 charset-normalizer==3.4.2
 Django==5.0.14
@@ -7,13 +8,17 @@ django-formtools==2.5.1
 django-js-asset==3.1.2
 django-mssql-backend==2.8.1
 fpdf==1.7.2
+idna==3.10
 mssql-django==1.5
 pillow==11.1.0
 pyodbc==5.2.0
 PyPDF2==3.0.1
+python-dotenv==1.2.1
 pytz==2025.2
 reportlab==4.4.2
+requests==2.32.5
 sqlparse==0.5.3
 typing_extensions==4.13.1
 tzdata==2025.2
-a==2025.2
+urllib3==2.5.0
+xlsxwriter==3.2.9
